# poetry-template

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
.devcontainer/: Dockerfile  devcontainer.json  setup-poetry.sh
docs/: README.md
