[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["hirosuban <you@example.com>"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest = "^7.0.0"
